# Currency-System

./: .gitignore  CMakeLists.txt  DEFENSE_REPORT_CLIENT.md  README.md
.github/workflows/: ci.yml
client/: CMakeLists.txt  resources.qrc
client/assets/styles/: app.qss
client/src/: main.cpp
client/src/app/: ClientApplication.cpp  ClientApplication.hpp  MainWindow.cpp  MainWindow.hpp
client/src/common/: BusyIndicatorGuard.hpp  DateTimeUtils.cpp  DateTimeUtils.hpp  ErrorClassifier.hpp  Errors.cpp  Errors.hpp  Result.hpp  ThemeManager.cpp  ThemeManager.hpp  UiText.hpp
client/src/controllers/: AggregationController.cpp  AggregationController.hpp  DashboardController.cpp  DashboardController.hpp  HistoryController.cpp  HistoryController.hpp  NavigationController.cpp  NavigationController.hpp  RatesController.cpp  RatesController.hpp  SettingsController.cpp  SettingsController.hpp  StartPageController.cpp  StartPageController.hpp
client/src/dto/: ApiDtos.cpp  ApiDtos.hpp  ExternalDtos.hpp  NormalizedDtos.hpp  ServerDtos.hpp  UiDtos.hpp
client/src/gateways/: AbstractApiSourceClient.cpp  AbstractApiSourceClient.hpp  AlphaVantageClient.cpp  AlphaVantageClient.hpp  CbrClient.cpp  CbrClient.hpp  CurrencyApiClient.cpp  CurrencyApiClient.hpp  CurrencyFreaksClient.cpp  CurrencyFreaksClient.hpp  EcbClient.cpp  EcbClient.hpp  ExchangeRateHostClient.cpp  ExchangeRateHostClient.hpp  FixerClient.cpp  FixerClient.hpp  FrankfurterClient.cpp  FrankfurterClient.hpp  IApiSourceClient.hpp  OpenExchangeRatesClient.cpp  OpenExchangeRatesClient.hpp  ServerGateway.cpp  ServerGateway.hpp
client/src/models/: AggregationTableModel.cpp  AggregationTableModel.hpp  ApiSelectionState.cpp  ApiSelectionState.hpp  AppState.cpp  AppState.hpp  CurrencyTableModel.cpp  CurrencyTableModel.hpp  HistoryTableModel.cpp  HistoryTableModel.hpp  ProviderCatalogTableModel.cpp  ProviderCatalogTableModel.hpp
client/src/models/viewmodels/: AggregationResultViewModel.hpp  CurrencyViewModel.hpp  HistoryPointViewModel.hpp  RateViewModel.hpp
client/src/serialization/: CbrMapper.cpp  CbrMapper.hpp  CsvPayloadParser.cpp  CsvPayloadParser.hpp  EcbMapper.cpp  EcbMapper.hpp  FrankfurterMapper.cpp  FrankfurterMapper.hpp  JsonPayloadParser.cpp  JsonPayloadParser.hpp  TextProtocolCodec.cpp  TextProtocolCodec.hpp  XmlPayloadParser.cpp  XmlPayloadParser.hpp
client/src/services/: AggregationService.cpp  AggregationService.hpp  ApiOrchestratorService.cpp  ApiOrchestratorService.hpp  ChartPreparationService.cpp  ChartPreparationService.hpp  ExportService.cpp  ExportService.hpp  NormalizationService.cpp  NormalizationService.hpp  ServerSyncService.cpp  ServerSyncService.hpp
client/src/views/pages/: AggregationPage.cpp  AggregationPage.hpp  DashboardPage.cpp  DashboardPage.hpp  HistoryPage.cpp  HistoryPage.hpp  RatesPage.cpp  RatesPage.hpp  SettingsPage.cpp  SettingsPage.hpp  StartPage.cpp  StartPage.hpp
client/src/views/widgets/: AggregationSummaryWidget.cpp  AggregationSummaryWidget.hpp  ApiSelectorWidget.cpp  ApiSelectorWidget.hpp  BurgerMenuWidget.cpp  BurgerMenuWidget.hpp  ConnectionStatusWidget.cpp  ConnectionStatusWidget.hpp  HistoryChartWidget.cpp  HistoryChartWidget.hpp  PreviewRatesWidget.cpp  PreviewRatesWidget.hpp  RatesTableWidget.cpp  RatesTableWidget.hpp
client/tests/: ApiOrchestratorServiceTests.cpp  ClientTestSupport.hpp  ClientTests.cpp  ExportServiceTests.cpp  HistoryChartWidgetTests.cpp  ServerGatewayTests.cpp
cmake/: Dependencies.cmake  FindZLIB.cmake
logs/: docker-compose.yml
logs/init/: 001_currency_logs_schema.sql
server/: CMakeLists.txt
server/src/: main.cpp
server/src/app/: Application.cpp  Application.hpp
server/src/common/: CurrencyNames.hpp  Exceptions.hpp  TimeUtils.cpp  TimeUtils.hpp  Validation.cpp  Validation.hpp
server/src/controllers/: ConversionController.cpp  ConversionController.hpp  CurrencyController.cpp  CurrencyController.hpp  HistoryController.cpp  HistoryController.hpp  IngestionController.cpp  IngestionController.hpp  QuoteController.cpp  QuoteController.hpp
server/src/domain/: ConversionResult.hpp  Currency.hpp  HistoryPoint.hpp  Quote.hpp
server/src/dto/: CommonDtos.hpp  ProtocolDtos.hpp  QueryDtos.hpp  UpdateDtos.hpp
server/src/logging/: ConsoleLogSink.cpp  ConsoleLogSink.hpp  JsonFileLogSink.cpp  JsonFileLogSink.hpp  LogEntry.cpp  LogEntry.hpp  LogSink.hpp  Logger.cpp  Logger.hpp
server/src/network/: RequestRouter.cpp  RequestRouter.hpp  Session.cpp  Session.hpp  TcpServer.cpp  TcpServer.hpp
server/src/providers/: CbrProvider.cpp  CbrProvider.hpp  EcbProvider.cpp  EcbProvider.hpp  FrankfurterProvider.cpp  FrankfurterProvider.hpp  HttpClient.cpp  HttpClient.hpp  MarketDataProvider.hpp
server/src/repositories/: InMemoryCurrencyRepository.cpp  InMemoryCurrencyRepository.hpp  InMemoryHistoryRepository.cpp  InMemoryHistoryRepository.hpp  InMemoryQueryCache.cpp  InMemoryQueryCache.hpp  InMemoryQuoteRepository.cpp  InMemoryQuoteRepository.hpp
server/src/serialization/: TextProtocolSerializer.cpp  TextProtocolSerializer.hpp
server/src/services/: ConversionService.cpp  ConversionService.hpp  CurrencyQueryService.cpp  CurrencyQueryService.hpp  HistoryQueryService.cpp  HistoryQueryService.hpp  IngestionService.cpp  IngestionService.hpp  MarketDataRefreshService.cpp  MarketDataRefreshService.hpp  QuoteQueryService.cpp  QuoteQueryService.hpp
server/tests/: CommonTests.cpp  ControllerTests.cpp  NetworkIntegrationTests.cpp  QuoteHistoryTests.cpp  RepositoryTests.cpp  RequestRouterTests.cpp  ServerWorkTests.cpp  ServiceTests.cpp  TestHelpers.hpp  TextProtocolSerializerTests.cpp
tools/: import_server_logs.py
